[metadata]
name = compose-davbrito
version = 0.0.1
author = David Brito
author_email = daelias14@gmail.com
description = A command line utility for making React.js componets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davbrito/compose
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    compose = compose:main
